# photo-digitization-v0

./: .gitignore  README.md  bootstrap.py  main_processing.py  processing_utils.py  pyproject.toml  requirements.txt  run_legacy_demo.py  sitecustomize.py
app/: gui_utils.py  main_processing.py  processing_utils.py
